 * EPScript phrase and print are now available to templates
 * foo{bar} in eprscript now returns value bar of hash foo

2006-10-11 moj
 * generate_apacheconf now loads the repository to make sure the 
    config is there

2006-10-11 moj
 * Converted files with entities to use EPScript and phrases

2006-10-11 cjg
 * Moved upgrade into tools - we'll need it later but not until the
    ep2>ep3 script.

2006-10-11 cjg
 * Started reworking configure_archive into epadmin

2006-10-12 cjg 
 * Removed entities.pl
 * No longer copies entites-en.dtd per language - now just makes one
    copy names entities.dtd
 * Changed the header of all XML files to reflect this.
 * Renamed archivename.pl to archive_name.pl

2006-10-12 cjg
 * Added labels and style to eprint-type (and long-view sets in general)

2006-10-12 cjg
 * Removed GEO IP code from Apache/LogHandler - this will be handled 
    in the batch script.

2006-10-12 tdb
 * test_pod script checks for presence of POD for public methods in
    EPrints modules
 * Added missing POD in TempDir

2006-10-12 cjg
 * Added labels to the refereed field.

2006-10-12 cjg
 * Fixed bug in render multifield component which caused the title to
    vanish when uncollapsing.
 * Made top of default surround a bit darker to look more like the top
    of window.
 * Made the text in the surround title bar bigger and bold
 * Made the collapsed bar look like the title bar.

2006-10-12 moj
 * Added namespaces throughout lib

2006-10-12 cjg 
 * Added some warnings when XML functions are passed undefined nodes.
 * Moved document type guesser into cfg.d/document_upload.pl
 * Fixed a couple of namespace change issues

2006-10-12 cjg 
 * Fixing some knock on effects from namespacing the XML files.
 * Phrases now use collapse to insert their pins.
 * Changes the margins on the surround css.
 * Removed a stray collapse option from the subjects input component
    in the default workflow.
 * Added a little padding to the top of the tabs 